# pHash

./: CMakeLists.txt  README.md  libpHash.spec
bindings/: CMakeLists.txt
bindings/c_sharp/: pHash.cs
bindings/java/: CMakeLists.txt  build.xml  pHash-jni.cpp  pHash-jni.h
bindings/java/org/phash/: pHash.java
bindings/php/: README.md  config.m4  pHash.cpp  php_pHash.h
bindings/python/: CMakeLists.txt  README.md  phash.pxd  phash.pyx  setup.py
examples/: test_imagephash.cpp
src/: audiophash.cpp  cimgffmpeg.cpp  cimgffmpeg.h  pHash.cpp  pHash.h.cmake  ph_fft.cpp  ph_fft.h  ph_heif.cpp  ph_heif.h
